[gd_scene load_steps=19 format=3 uid="uid://cdvuqv6uo86e4"]

[ext_resource type="PackedScene" uid="uid://bpg4fe6605cix" path="res://color_edit/color_edit.tscn" id="1"]
[ext_resource type="Script" path="res://main/main.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://8nx15n0lumde" path="res://main/darkestgray_pixel.png" id="2_lkbo6"]
[ext_resource type="Script" path="res://main/reset_button.gd" id="3"]
[ext_resource type="Script" path="res://main/pixel_arts_grid_container.gd" id="4"]
[ext_resource type="Script" path="res://main/simplicity_h_slider.gd" id="6"]
[ext_resource type="Script" path="res://main/colors.gd" id="7"]
[ext_resource type="Script" path="res://main/pixel_arts_scroll_container.gd" id="8"]
[ext_resource type="Script" path="res://main/simplicity_spin_box.gd" id="9"]
[ext_resource type="Script" path="res://main/generate_button.gd" id="10"]
[ext_resource type="Texture2D" uid="uid://11ueo8apf2ye" path="res://main/add_icon.exr" id="11"]
[ext_resource type="PackedScene" path="res://main/background_texture_button/background_texture_button.tscn" id="12"]
[ext_resource type="Texture2D" uid="uid://cklkf18kmnqtp" path="res://main/checkerboard32x32.png" id="13"]
[ext_resource type="Script" path="res://main/popup_messages.gd" id="15"]
[ext_resource type="Script" path="res://main/width_edit.gd" id="16"]
[ext_resource type="Script" path="res://main/height_edit.gd" id="17"]
[ext_resource type="Script" path="res://main/panel_scroll_container.gd" id="18"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_trc03"]
texture = ExtResource("2_lkbo6")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_styles/panel = SubResource("StyleBoxTexture_trc03")

[node name="HSplitContainer" type="HSplitContainer" parent="BackgroundPanel"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/HSplitContainer/MarginContainer"]
layout_mode = 2
script = ExtResource("8")

[node name="PixelArts" type="GridContainer" parent="BackgroundPanel/HSplitContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
script = ExtResource("4")

[node name="ScrollContainer" type="ScrollContainer" parent="BackgroundPanel/HSplitContainer"]
custom_minimum_size = Vector2(218, 0)
layout_mode = 2
script = ExtResource("18")

[node name="PanelContainer" type="PanelContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="GenerateButton" type="Button" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Generate"
script = ExtResource("10")

[node name="Quantity" type="HBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Quantity"]
layout_mode = 2
text = "Quantity:"

[node name="SpinBox" type="SpinBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Quantity"]
layout_mode = 2
min_value = 1.0
value = 16.0
allow_greater = true

[node name="Size" type="VBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size"]
layout_mode = 2
text = "Size:"

[node name="MarginContainer" type="MarginContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size"]
layout_mode = 2
theme_override_constants/margin_left = 16

[node name="VBoxContainer" type="VBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer"]
layout_mode = 2

[node name="Edit" type="GridContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="WidthLabel" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit"]
layout_mode = 2
text = "Width:"

[node name="WidthEdit" type="SpinBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit"]
layout_mode = 2
min_value = 1.0
max_value = 256.0
value = 16.0
exp_edit = true
script = ExtResource("16")
pair_nodepath = NodePath("../HeightEdit")

[node name="HeightLabel" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit"]
layout_mode = 2
text = "Height:"

[node name="HeightEdit" type="SpinBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit"]
layout_mode = 2
min_value = 1.0
max_value = 256.0
value = 16.0
exp_edit = true
script = ExtResource("17")
pair_nodepath = NodePath("../WidthEdit")

[node name="KeepAspectRatio" type="CheckBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Keep aspect ratio"

[node name="Symmetry" type="VBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Symmetry"]
layout_mode = 2
text = "Symmetry:"

[node name="None" type="CheckBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Symmetry"]
layout_mode = 2
text = "None"

[node name="Horizontal" type="CheckBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Symmetry"]
layout_mode = 2
text = "Horizontal"

[node name="Diagonal" type="CheckBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Symmetry"]
layout_mode = 2
text = "Diagonal"

[node name="NoisePeriod" type="GridContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Edit" type="HBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod"]
layout_mode = 2

[node name="Label" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/Edit"]
layout_mode = 2
text = "Noise period:"

[node name="SpinBox" type="SpinBox" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/Edit"]
layout_mode = 2
min_value = 0.1
max_value = 32.0
step = 0.1
value = 10.0
script = ExtResource("9")

[node name="HSlider" type="HSlider" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod"]
layout_mode = 2
min_value = 0.1
max_value = 32.0
step = 0.1
value = 10.0
script = ExtResource("6")

[node name="Colors" type="VBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
script = ExtResource("7")

[node name="Label" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Colors"]
layout_mode = 2
text = "Colors:"

[node name="ColorEdit" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Colors" instance=ExtResource("1")]
layout_mode = 2
removable = false

[node name="AddButton" type="Button" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Colors"]
layout_mode = 2
text = "Add new color"
icon = ExtResource("11")

[node name="ResetButton" type="Button" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Reset"
script = ExtResource("3")

[node name="Background" type="HBoxContainer" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Background"]
layout_mode = 2
text = "Background:"

[node name="PanelTextureButton" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Background" instance=ExtResource("12")]
layout_mode = 2
texture_normal = ExtResource("2_lkbo6")
ignore_texture_size = true
stretch_mode = 1

[node name="CheckerboardTextureButton" parent="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Background" instance=ExtResource("12")]
layout_mode = 2
texture_normal = ExtResource("13")

[node name="PopupMessages" type="VBoxContainer" parent="BackgroundPanel"]
layout_mode = 0
offset_right = 799.0
offset_bottom = 600.0
mouse_filter = 2
alignment = 2
script = ExtResource("15")

[connection signal="ready" from="." to="BackgroundPanel/HSplitContainer/MarginContainer/ScrollContainer/PixelArts" method="_on_PixelArtsContainer_resized" flags=6]
[connection signal="ready" from="." to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/ResetButton" method="_on_Main_ready" flags=6]
[connection signal="resized" from="BackgroundPanel/HSplitContainer/MarginContainer" to="BackgroundPanel/PopupMessages" method="_on_MarginContainer_resized"]
[connection signal="pixel_scale_changed" from="BackgroundPanel/HSplitContainer/MarginContainer/ScrollContainer" to="BackgroundPanel/HSplitContainer/MarginContainer/ScrollContainer/PixelArts" method="_on_ScrollContainer_pixel_scale_changed"]
[connection signal="resized" from="BackgroundPanel/HSplitContainer/MarginContainer/ScrollContainer/PixelArts" to="BackgroundPanel/HSplitContainer/MarginContainer/ScrollContainer/PixelArts" method="_on_PixelArtsContainer_resized"]
[connection signal="resized" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer" to="BackgroundPanel/HSplitContainer/ScrollContainer" method="_on_PanelContainer_resized"]
[connection signal="pressed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/GenerateButton" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/GenerateButton" method="_on_GenerateButton_pressed"]
[connection signal="ready" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/WidthEdit" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/WidthEdit" method="_on_WidthEdit_ready" flags=6]
[connection signal="value_changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/WidthEdit" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/WidthEdit" method="_on_WidthEdit_value_changed"]
[connection signal="value_changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/WidthEdit" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/HeightEdit" method="_on_WidthEdit_value_changed"]
[connection signal="ready" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/HeightEdit" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/HeightEdit" method="_on_HeightEdit_ready" flags=6]
[connection signal="value_changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/HeightEdit" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/WidthEdit" method="_on_HeightEdit_value_changed"]
[connection signal="value_changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/HeightEdit" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Size/MarginContainer/VBoxContainer/Edit/HeightEdit" method="_on_HeightEdit_value_changed"]
[connection signal="changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/Edit/SpinBox" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/HSlider" method="_on_SpinBox_changed"]
[connection signal="value_changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/Edit/SpinBox" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/HSlider" method="_on_SpinBox_value_changed"]
[connection signal="changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/HSlider" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/Edit/SpinBox" method="_on_HSlider_changed"]
[connection signal="value_changed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/HSlider" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/NoisePeriod/Edit/SpinBox" method="_on_HSlider_value_changed"]
[connection signal="pressed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Colors/AddButton" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Colors" method="_on_AddButton_pressed"]
[connection signal="pressed" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/ResetButton" to="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/ResetButton" method="_on_ResetButton_pressed"]
[connection signal="change_background_request" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Background/PanelTextureButton" to="." method="_on_change_background_requested"]
[connection signal="change_background_request" from="BackgroundPanel/HSplitContainer/ScrollContainer/PanelContainer/MarginContainer/VBoxContainer/Background/CheckerboardTextureButton" to="." method="_on_change_background_requested"]
